# ProjectEuler

./: .gitignore  Answers.txt  BuildAndRun.ps1  Problems.txt  ProjectEuler.cabal  ProjectEuler.lkshs  ProjectEuler.lkshw  ProjectEuler.sublime-project  README.md
src/: Core.hs  Divisors.hs  Fibonacci.hs  Main.hs  Primes.hs  Problem1.hs  Problem10.hs  Problem11.hs  Problem12.hs  Problem13.hs  Problem14.hs  Problem16.hs  Problem17.hs  Problem18.hs  Problem2.hs  Problem20.hs  Problem21.hs  Problem22.hs  Problem23.hs  Problem24.hs  Problem25.hs  Problem27.hs  Problem3.hs  Problem30.hs  Problem35.hs  Problem36.hs  Problem4.hs  Problem41.hs  Problem48.hs  Problem5.hs  Problem52.hs  Problem6.hs  Problem62.hs  Problem7.hs  Problem8.hs  Problem9.hs  ProjectEuler.hs
