name: ProjectEuler
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: Solutions to Project Euler problems
description:  
data-dir: ""
 
executable ProjectEuler
    build-depends: base -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Problem6 Problem5 Problem4 Problem2 Problem13
                   Problem1 Fibonacci
 