name: ProjectEuler
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: Solutions to Project Euler problems
description:  
data-dir: ""
 
executable ProjectEuler
    build-depends: base -any, containers -any, mtl -any, primes -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Problem9 Problem8 Problem7 Problem6 Problem5
                   Problem48 Problem41 Problem4 Problem30 Problem3 Problem20 Problem2
                   Problem16 Problem14 Problem13 Problem12 Problem10 Problem1
                   Fibonacci Core
 